--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.6",
+    "eth-revert-reason": "^1.0.3",
     "openzeppelin-test-helpers": "^0.5.1"
   }
 }
